topper contact info fix width working menu collapse

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -90,9 +90,8 @@ h4{
 }
 //TOP CONTACT MINI MENU
 #top{@include wrap(80%, 0px, 0px); height: 25px;}
-	img.topimg{float: left; display: inline-block;}
-	p.topp{display: inline-block;}
-	/*p.topp{float: left;}*/
+	img.topimg{display: inline-block; float: left;} // margin collapse fix!
+	p.topp{display: inline-block; float: left; margin-bottom: 5px;}
 
 	#top img{
 		margin-top: 2px;
@@ -108,6 +107,7 @@ h4{
 //NAVIGATIEMENU
 //MENU IMG
 header{
+	display: inline-block;
 	@include wrap(100%, 0px, 25px);
 	z-index: 2 !important;
 	.menuwrap{
